antlrexperiments/property-file/src/main/antlr/PropertyFileEmbedded.g4
grammar PropertyFileEmbedded;
@members {
    void startFile() {}
    void finishFile() {}
    void defineProperty(Token name, Token value) {}
}

file: {startFile();} prop+ {finishFile();};
prop: ID '=' STRING '\n' {defineProperty($ID, $STRING);};
ID: [a-z]+;
STRING: '"' .*? '"';
